compose_css: Fix responsiveness for long channel names.
The compose_recipient container overflowed for smaller screens
when long channel names were selected. This commit fixes this
issue by truncating the channel name in case of overflow.
`min-width` and `max-width` has been set to properly display
the inputs across different screen sizes.

--- a/web/styles/compose.css
+++ b/web/styles/compose.css
@@ -1027,6 +1027,8 @@ textarea.new_message_textarea {
     grid-template-columns: minmax(0, 1fr) auto;
     align-items: stretch;
     flex: 1 1 0;
+    /* 128px at 16px/1em */
+    min-width: 8em;
     border: 1px solid var(--color-compose-recipient-box-border-color);
     border-radius: 4px;
     transition: border-color 0.2s ease;
@@ -1094,7 +1096,9 @@ textarea.new_message_textarea {
 }
 
 #compose_select_recipient_widget {
-    width: auto;
+    width: 100%;
+    /* 256px at 16px/1em */
+    max-width: 16em;
     outline: none;
     /* We override the component-level colors to
        ensure concord with the topic box. */
@@ -1440,6 +1444,8 @@ textarea.new_message_textarea {
 #compose_select_recipient_widget_wrapper {
     display: flex;
     justify-content: flex-start;
+    /* absolute min-width is needed to truncate text */
+    min-width: 0;
     height: var(--compose-recipient-box-min-height);
 
     &:focus-visible {
@@ -1452,6 +1458,7 @@ textarea.new_message_textarea {
 
     .dropdown_widget_value {
         flex-grow: 1;
+        overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
         color: var(--color-text-default);
